--- a/gradle.properties
+++ b/gradle.properties
@@ -17,9 +17,10 @@ APP_VERSION_CODE=5335
 APP_VERSION_NAME=11.2.3
 APP_PACKAGE=org.telegram.messenger
 IS_PRIVATE=false
-RELEASE_KEY_PASSWORD=android
-RELEASE_KEY_ALIAS=androidkey
-RELEASE_STORE_PASSWORD=android
+RELEASE_KEY_PASSWORD=RELEASE_KEY_PASSWORD
+RELEASE_KEY_ALIAS=RELEASE_KEY_ALIAS
+RELEASE_STORE_PASSWORD=password
+android.useDeprecatedNdk=true
 org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=true
 org.gradle.parallel=true
