--- a/gradle.properties
+++ b/gradle.properties
@@ -17,8 +17,8 @@ APP_VERSION_CODE=5335
 APP_VERSION_NAME=11.2.3
 APP_PACKAGE=org.telegram.messenger
 IS_PRIVATE=false
-RELEASE_KEY_PASSWORD=RELEASE_KEY_PASSWORD
-RELEASE_KEY_ALIAS=RELEASE_KEY_ALIAS
+RELEASE_KEY_PASSWORD=password
+RELEASE_KEY_ALIAS=alias
 RELEASE_STORE_PASSWORD=password
 android.useDeprecatedNdk=true
 org.gradle.jvmargs=-Xmx4096M
